# AutoPrinter

./: CMakeLists.txt  README.md
res/: autoprinter.qrc  autoprinter.ts
src/: autoprinter.cpp  autoprinter.h  autoprinter.ui  main.cpp
