cmake_minimum_required(VERSION 2.4)
PROJECT(AutoPrint)
FIND_PACKAGE(Qt4 REQUIRED)

SET(AutoPrint_SOURCES src/main.cpp src/autoprinter.cpp)
SET(AutoPrint_HEADERS src/autoprinter.h)
SET(AutoPrint_FORMS src/autoprinter.ui)
SET(AutoPrint_RESOURCES res/autoprinter.qrc)

QT4_WRAP_CPP(autoprinter_HEADERS_MOC ${AutoPrint_HEADERS})
QT4_WRAP_UI(autoprinter_FORMS_HEADERS ${AutoPrint_FORMS})
QT4_ADD_RESOURCES(autoprinter_RESOURCES_RCC ${AutoPrint_RESOURCES})

SET(AutoPrint_LANGFILES res/autoprinter.ts)
QT4_CREATE_TRANSLATION(autoprinter_LANG_RES ${AutoPrint_SOURCES} ${AutoPrint_FORMS} ${AutoPrint_LANGFILES})

#SET(QT_USE_QMAIN TRUE)

#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(AutoPrint ${AutoPrint_SOURCES} 
    ${autoprinter_HEADERS_MOC} 
    ${autoprinter_FORMS_HEADERS} 
    ${autoprinter_RESOURCES_RCC}
	${autoprinter_LANG_RES})
	
TARGET_LINK_LIBRARIES(AutoPrint ${QT_LIBRARIES})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET_TARGET_PROPERTIES(AutoPrint PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:windows /ENTRY:mainCRTStartup")
SET_TARGET_PROPERTIES(AutoPrint PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows /ENTRY:mainCRTStartup")